<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/_6sdp"
        android:gravity="center_horizontal">

        <LinearLayout
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lo_i_b_n"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:textSize="@dimen/_18ssp" />

            <ImageView
                android:id="@+id/btn_close"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_close" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/_8sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_title">

            <LinearLayout
                android:id="@+id/view_default"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <FrameLayout
                    android:id="@+id/frame_image_default"
                    android:layout_width="@dimen/_62sdp"
                    android:layout_height="@dimen/_62sdp"
                    android:background="@drawable/background_icon">
                    <ImageView
                        android:id="@+id/image_default"
                        android:layout_width="@dimen/_52sdp"
                        android:layout_height="@dimen/_52sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/mac_dinh"/>
                </FrameLayout>

                <TextView
                    android:id="@+id/text_default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:text="@string/m_c_nh" />



            </LinearLayout>
            <LinearLayout
                android:id="@+id/view_satellite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <FrameLayout
                    android:id="@+id/frame_image_satellite"
                    android:layout_width="@dimen/_62sdp"
                    android:layout_height="@dimen/_62sdp"
                    android:background="@drawable/background_icon">
                    <ImageView
                        android:id="@+id/image_satellite"
                        android:layout_width="@dimen/_52sdp"
                        android:layout_height="@dimen/_52sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/ve_tinh"/>
                </FrameLayout>

                <TextView
                    android:id="@+id/text_satellite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:text="@string/v_tinh" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/view_terrain"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <FrameLayout
                    android:id="@+id/frame_image_terrain"
                    android:layout_width="@dimen/_62sdp"
                    android:layout_height="@dimen/_62sdp"
                    android:background="@drawable/background_icon">
                    <ImageView
                        android:id="@+id/image_terrain"
                        android:layout_width="@dimen/_52sdp"
                        android:layout_height="@dimen/_52sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/dia_hinh" />
                </FrameLayout>

                <TextView
                    android:id="@+id/text_terrain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:text="@string/a_h_nh" />

            </LinearLayout>
        </LinearLayout>
        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_marginTop="@dimen/_4sdp"
            app:layout_constraintTop_toBottomOf="@id/layoutStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/languages"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ng_n_ng"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:textSize="@dimen/_18ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/selectLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/_8sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/languages">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_52sdp"
                    android:src="@drawable/vietnamese"
                    android:background="@drawable/background_icon"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:textSize="@dimen/_14ssp"
                    android:text="@string/ti_ng_vi_t" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_52sdp"
                    android:src="@drawable/english"
                    android:background="@drawable/background_icon"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:textSize="@dimen/_14ssp"
                    android:text="@string/ti_ng_anh" />

            </LinearLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>